@@ -6,10 +6,12 @@ import com.google.common.collect.ImmutableMap;
 import com.yahoo.config.application.api.ApplicationPackage;
 import com.yahoo.config.application.api.DeployLogger;
 import com.yahoo.path.Path;
+import com.yahoo.searchlib.ranking.features.FeatureNames;
 import com.yahoo.search.query.profile.QueryProfileRegistry;
 import com.yahoo.search.query.profile.types.FieldDescription;
 import com.yahoo.search.query.profile.types.QueryProfileType;
 import com.yahoo.search.query.ranking.Diversity;
+import com.yahoo.search.query.ranking.ElementGap;
 import com.yahoo.schema.document.Attribute;
 import com.yahoo.schema.document.ImmutableSDField;
 import com.yahoo.schema.document.SDDocumentType;
@@ -43,11 +45,13 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.OptionalDouble;
+import java.util.OptionalInt;
 import java.util.Set;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
 import java.util.logging.Level;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -61,6 +65,8 @@ public class RankProfile implements Cloneable {
     public final static String FIRST_PHASE = "firstphase";
     public final static String SECOND_PHASE = "secondphase";
     public final static String GLOBAL_PHASE = "globalphase";
+
+    private static final Pattern SCHEMA_IDENTIFIER = Pattern.compile("[A-Za-z_][A-Za-z0-9_]*");
 
     /** The schema-unique name of this rank profile */
     private final String name;
@@ -87,14 +93,20 @@ public class RankProfile implements Cloneable {
     /** The ranking expression to be used for global-phase */
     private RankingExpressionFunction globalPhaseRanking = null;
 
-    /** Number of hits to be reranked in second phase, -1 means use default */
-    private int rerankCount = -1;
+    /** Number of hits to be reranked in second phase */
+    private Optional<Integer> rerankCount = Optional.empty();
+
+    /** Number of hits to be reranked in second phase across all nodes, */
+    private Optional<Integer> totalRerankCount = Optional.empty();
 
     /** Number of hits to be reranked in global-phase, -1 means use default */
     private int globalPhaseRerankCount = -1;
 
-    /** Mysterious attribute */
-    private int keepRankCount = -1;
+    /** The number of hits per node for which to keep rank data in first phase, empty to use the default */
+    private Optional<Integer> keepRankCount = Optional.empty();
+
+    /** The number of hits across all nodes for which to keep rank data in first phase, empty to use keepRankCount */
+    private Optional<Integer> totalKeepRankCount = Optional.empty();
 
     private int numThreadsPerSearch = -1;
     private int minHitsPerThread = -1;
@@ -103,20 +115,31 @@ public class RankProfile implements Cloneable {
     private Double termwiseLimit = null;
     private Double postFilterThreshold = null;
     private Double approximateThreshold = null;
+    private Double filterFirstThreshold = null;
+    private Double filterFirstExploration = null;
+    private Double explorationSlack = null;
+    private Boolean prefetchTensors = null;
     private Double targetHitsMaxAdjustmentFactor = null;
+    private Double weakandStopwordLimit = null;
+    private Boolean weakandAllowDropAll = null;
+    private Double weakandAdjustTarget = null;
+    private Double filterThreshold = null;
 
     /** The drop limit used to drop hits with rank score less than or equal to this value */
     private double rankScoreDropLimit = -Double.MAX_VALUE;
     private double secondPhaseRankScoreDropLimit = -Double.MAX_VALUE;
+    private double globalPhaseRankScoreDropLimit = -Double.MAX_VALUE;
 
     private Set<ReferenceNode> summaryFeatures;
-    private String inheritedSummaryFeaturesProfileName;
+    private final List<String> inheritedSummaryFeaturesProfileNames = new ArrayList<>();
 
     private Set<ReferenceNode> matchFeatures;
     private Set<ReferenceNode> hiddenMatchFeatures;
-    private String inheritedMatchFeaturesProfileName;
+    private final List<String> inheritedMatchFeaturesProfileNames = new ArrayList<>();
 
     private Set<ReferenceNode> rankFeatures;
+
+    private Set<ReferenceNode> sortFeatures;
 
     /** The properties of this - a multimap */
     private Map<String, List<RankProperty>> rankProperties = new LinkedHashMap<>();
@@ -134,6 +157,11 @@ public class RankProfile implements Cloneable {
     private final Map<String, OnnxModel> onnxModels = new LinkedHashMap<>();
 
     private Set<String> filterFields = new HashSet<>();
+
+    // Field-level `rank my_field { filter-threshold: ... }` that overrides the profile-level `filter-threshold` (if any)
+    private Map<String, Double> explicitFieldRankFilterThresholds = new LinkedHashMap<>();
+
+    private Map<String, ElementGap> explicitFieldRankElementGaps = new LinkedHashMap<>();
 
     private final RankProfileRegistry rankProfileRegistry;
 
@@ -574,11 +602,11 @@ public class RankProfile implements Cloneable {
      * the final (with inheritance included) summary features of the given parent.
      * The profile must be one which is directly inherited by this.
      */
-    public void setInheritedSummaryFeatures(String parentProfile) {
+    public void addInheritedSummaryFeatures(String parentProfile) {
         if ( ! inheritedNames().contains(parentProfile))
             throw new IllegalArgumentException("This can only inherit the summary features of a directly inherited profile, " +
                                                "but is attempting to inherit '" + parentProfile);
-        this.inheritedSummaryFeaturesProfileName = parentProfile;
+        this.inheritedSummaryFeaturesProfileNames.add(parentProfile);
     }
 
     /**
@@ -587,48 +615,55 @@ public class RankProfile implements Cloneable {
      * or if match features are set in this, only have the match features in this.
      * With this set the resulting match features of this will be the superset of those defined in this and
      * the final (with inheritance included) match features of the given parent.
-     * The profile must be one which which is directly inherited by this.
-     *
+     * The profile must be one which is directly inherited by this.
      */
-    public void setInheritedMatchFeatures(String parentProfile) {
+    public void addInheritedMatchFeatures(String parentProfile) {
         if ( ! inheritedNames().contains(parentProfile))
             throw new IllegalArgumentException("This can only inherit the match features of a directly inherited profile," +
                                                "but is attempting to inherit '" + parentProfile);
-        this.inheritedMatchFeaturesProfileName = parentProfile;
+        this.inheritedMatchFeaturesProfileNames.add(parentProfile);
     }
 
     /** Returns a read-only view of the summary features to use in this profile. This is never null */
     public Set<ReferenceNode> getSummaryFeatures() {
-        if (inheritedSummaryFeaturesProfileName != null && summaryFeatures != null) {
-            Set<ReferenceNode> combined = new HashSet<>();
-            RankProfile inherited = inherited().stream()
-                                               .filter(p -> p.name().equals(inheritedSummaryFeaturesProfileName))
-                                               .findAny()
-                                               .orElseThrow();
-            combined.addAll(inherited.getSummaryFeatures());
-            combined.addAll(summaryFeatures);
-            return Collections.unmodifiableSet(combined);
+        if (inheritedSummaryFeaturesProfileNames.isEmpty()) {
+            if (summaryFeatures != null)
+                return Collections.unmodifiableSet(summaryFeatures);
+            return uniquelyInherited(RankProfile::getSummaryFeatures, f -> ! f.isEmpty(), "summary features")
+                    .orElse(Set.of());
         }
-        if (summaryFeatures != null) return Collections.unmodifiableSet(summaryFeatures);
-        return uniquelyInherited(RankProfile::getSummaryFeatures, f -> ! f.isEmpty(), "summary features")
-                .orElse(Set.of());
+        Set<ReferenceNode> combined = new HashSet<>();
+        for (String inheritName : inheritedSummaryFeaturesProfileNames) {
+            RankProfile inherited = inherited().stream()
+                    .filter(p -> p.name().equals(inheritName))
+                    .findAny()
+                    .orElseThrow();
+            combined.addAll(inherited.getSummaryFeatures());
+        }
+        if (summaryFeatures != null)
+            combined.addAll(summaryFeatures);
+        return Collections.unmodifiableSet(combined);
     }
 
     /** Returns a read-only view of the match features to use in this profile. This is never null */
     public Set<ReferenceNode> getMatchFeatures() {
-        if (inheritedMatchFeaturesProfileName != null && matchFeatures != null) {
-            Set<ReferenceNode> combined = new HashSet<>();
-            RankProfile inherited = inherited().stream()
-                                               .filter(p -> p.name().equals(inheritedMatchFeaturesProfileName))
-                                               .findAny()
-                                               .orElseThrow();
-            combined.addAll(inherited.getMatchFeatures());
-            combined.addAll(matchFeatures);
-            return Collections.unmodifiableSet(combined);
+        if (inheritedMatchFeaturesProfileNames.isEmpty()) {
+            if (matchFeatures != null)
+                return Collections.unmodifiableSet(matchFeatures);
+            return uniquelyInherited(RankProfile::getMatchFeatures, f -> ! f.isEmpty(), "match features")
+                    .orElse(Set.of());
         }
-        if (matchFeatures != null) return Collections.unmodifiableSet(matchFeatures);
-        return uniquelyInherited(RankProfile::getMatchFeatures, f -> ! f.isEmpty(), "match features")
-                .orElse(Set.of());
+        Set<ReferenceNode> combined = new HashSet<>();
+        for (String inheritName : inheritedMatchFeaturesProfileNames) {
+            RankProfile inherited = inherited().stream()
+                    .filter(p -> p.name().equals(inheritName))
+                    .findAny()
+                    .orElseThrow();
+            combined.addAll(inherited.getMatchFeatures());
+        }
+        if (matchFeatures != null)
+            combined.addAll(matchFeatures);
+        return Collections.unmodifiableSet(combined);
     }
 
     public Set<ReferenceNode> getHiddenMatchFeatures() {
@@ -688,6 +723,33 @@ public class RankProfile implements Cloneable {
         }
     }
 
+    /** Returns a read-only view of the sort features to use in this profile. This is never null */
+    public Set<ReferenceNode> getSortFeatures() {
+        if (sortFeatures != null) return Collections.unmodifiableSet(sortFeatures);
+        return uniquelyInherited(RankProfile::getSortFeatures, f -> ! f.isEmpty(), "sort-features")
+                .orElse(Set.of());
+    }
+
+    /**
+     * Adds the content of the given feature list to the internal list of sort features.
+     * Each entry must be a bare schema identifier.
+     */
+    public void addSortFeatures(FeatureList features) {
+        if (sortFeatures == null)
+            sortFeatures = new LinkedHashSet<>();
+        for (ReferenceNode feature : features) {
+            validateSortFeature(feature);
+            sortFeatures.add(feature);
+        }
+    }
+
+    private void validateSortFeature(ReferenceNode feature) {
+        var reference = feature.reference();
+        if ( ! reference.isIdentifier() || ! SCHEMA_IDENTIFIER.matcher(reference.name()).matches())
+            throw new IllegalArgumentException("sort-features entries must be bare schema identifiers " +
+                                               "([A-Za-z_][A-Za-z0-9_]*), got '" + feature + "'");
+    }
+
     /** Returns a read only flattened list view of the rank properties to use in this profile. This is never null. */
     public List<RankProperty> getRankProperties() {
         List<RankProperty> properties = new ArrayList<>();
@@ -740,11 +802,18 @@ public class RankProfile implements Cloneable {
         rankProperties.computeIfAbsent(rankProperty.getName(), (String key) -> new ArrayList<>(1)).add(rankProperty);
     }
 
-    public void setRerankCount(int rerankCount) { this.rerankCount = rerankCount; }
+    public void setRerankCount(int rerankCount) { this.rerankCount = Optional.of(rerankCount); }
 
-    public int getRerankCount() {
-        if (rerankCount >= 0) return rerankCount;
-        return uniquelyInherited(RankProfile::getRerankCount, c -> c >= 0, "rerank-count").orElse(-1);
+    public void setTotalRerankCount(int totalRerankCount) { this.totalRerankCount = Optional.of(totalRerankCount); }
+
+    public Optional<Integer> getRerankCount() {
+        if (rerankCount.isPresent()) return rerankCount;
+        return uniquelyInherited(RankProfile::getRerankCount, Optional::isPresent, "rerank-count").orElse(Optional.empty());
+    }
+
+    public Optional<Integer> getTotalRerankCount() {
+        if (totalRerankCount.isPresent()) return totalRerankCount;
+        return uniquelyInherited(RankProfile::getTotalRerankCount, Optional::isPresent, "total-rerank-count").orElse(Optional.empty());
     }
 
     public void setGlobalPhaseRerankCount(int count) { this.globalPhaseRerankCount = count; }
@@ -779,7 +848,15 @@ public class RankProfile implements Cloneable {
     public void setTermwiseLimit(double termwiseLimit) { this.termwiseLimit = termwiseLimit; }
     public void setPostFilterThreshold(double threshold) { this.postFilterThreshold = threshold; }
     public void setApproximateThreshold(double threshold) { this.approximateThreshold = threshold; }
+    public void setFilterFirstThreshold(double threshold) { this.filterFirstThreshold = threshold; }
+    public void setFilterFirstExploration(double exploration) { this.filterFirstExploration = exploration; }
+    public void setExplorationSlack(double slack) { this.explorationSlack = slack; }
+    public void setPrefetchTensors(boolean value) { this.prefetchTensors = value; }
     public void setTargetHitsMaxAdjustmentFactor(double factor) { this.targetHitsMaxAdjustmentFactor = factor; }
+    public void setWeakandStopwordLimit(double limit) { this.weakandStopwordLimit = limit; }
+    public void setWeakandAdjustTarget(double target) { this.weakandAdjustTarget = target; }
+    public void setWeakandAllowDropAll(boolean value) { this.weakandAllowDropAll = value; }
+    public void setFilterThreshold(double threshold) { this.filterThreshold = threshold; }
 
     public OptionalDouble getTermwiseLimit() {
         if (termwiseLimit != null) return OptionalDouble.of(termwiseLimit);
@@ -801,11 +878,67 @@ public class RankProfile implements Cloneable {
         return uniquelyInherited(RankProfile::getApproximateThreshold, OptionalDouble::isPresent, "approximate-threshold").orElse(OptionalDouble.empty());
     }
 
+    public OptionalDouble getFilterFirstThreshold() {
+        if (filterFirstThreshold != null) {
+            return OptionalDouble.of(filterFirstThreshold);
+        }
+        return uniquelyInherited(RankProfile::getFilterFirstThreshold, OptionalDouble::isPresent, "filter-first-threshold").orElse(OptionalDouble.empty());
+    }
+
+    public OptionalDouble getFilterFirstExploration() {
+        if (filterFirstExploration != null) {
+            return OptionalDouble.of(filterFirstExploration);
+        }
+        return uniquelyInherited(RankProfile::getFilterFirstExploration, OptionalDouble::isPresent, "filter-first-exploration").orElse(OptionalDouble.empty());
+    }
+
+    public OptionalDouble getExplorationSlack() {
+        if (explorationSlack != null) {
+            return OptionalDouble.of(explorationSlack);
+        }
+        return uniquelyInherited(RankProfile::getExplorationSlack, OptionalDouble::isPresent, "exploration-slack").orElse(OptionalDouble.empty());
+    }
+
+    public Boolean getPrefetchTensors() {
+        if (prefetchTensors != null) {
+            return prefetchTensors;
+        }
+        return uniquelyInherited(RankProfile::getPrefetchTensors, "prefetch-tensors").orElse(null);
+    }
+
     public OptionalDouble getTargetHitsMaxAdjustmentFactor() {
         if (targetHitsMaxAdjustmentFactor != null) {
             return OptionalDouble.of(targetHitsMaxAdjustmentFactor);
         }
         return uniquelyInherited(RankProfile::getTargetHitsMaxAdjustmentFactor, OptionalDouble::isPresent, "target-hits-max-adjustment-factor").orElse(OptionalDouble.empty());
+    }
+
+    public OptionalDouble getWeakandStopwordLimit() {
+        if (weakandStopwordLimit != null) {
+            return OptionalDouble.of(weakandStopwordLimit);
+        }
+        return uniquelyInherited(RankProfile::getWeakandStopwordLimit, OptionalDouble::isPresent, "weakand-stopword-limit").orElse(OptionalDouble.empty());
+    }
+
+    public Boolean getWeakandAllowDropAll() {
+        if (weakandAllowDropAll != null) {
+            return weakandAllowDropAll;
+        }
+        return uniquelyInherited(RankProfile::getWeakandAllowDropAll, "weakand-allow-drop-all").orElse(null);
+    }
+
+    public OptionalDouble getWeakandAdjustTarget() {
+        if (weakandAdjustTarget != null) {
+            return OptionalDouble.of(weakandAdjustTarget);
+        }
+        return uniquelyInherited(RankProfile::getWeakandAdjustTarget, OptionalDouble::isPresent, "weakand-adjust-target").orElse(OptionalDouble.empty());
+    }
+
+    public OptionalDouble getFilterThreshold() {
+        if (filterThreshold != null) {
+            return OptionalDouble.of(filterThreshold);
+        }
+        return uniquelyInherited(RankProfile::getFilterThreshold, OptionalDouble::isPresent, "filter-threshold").orElse(OptionalDouble.empty());
     }
 
     /** Whether we should ignore the default rank features. Set to null to use inherited */
@@ -818,11 +951,18 @@ public class RankProfile implements Cloneable {
         return uniquelyInherited(RankProfile::getIgnoreDefaultRankFeatures, "ignore-default-rank-features").orElse(false);
     }
 
-    public void setKeepRankCount(int rerankArraySize) { this.keepRankCount = rerankArraySize; }
+    public void setKeepRankCount(int count) { this.keepRankCount = Optional.of(count); }
 
-    public int getKeepRankCount() {
-        if (keepRankCount >= 0) return keepRankCount;
-        return uniquelyInherited(RankProfile::getKeepRankCount, c -> c >= 0, "keep-rank-count").orElse(-1);
+    public Optional<Integer> getKeepRankCount() {
+        if (keepRankCount.isPresent()) return keepRankCount;
+        return uniquelyInherited(RankProfile::getKeepRankCount, Optional::isPresent, "keep-rank-count").orElse(Optional.empty());
+    }
+
+    public void setTotalKeepRankCount(int totalKeepRankCount) { this.totalKeepRankCount = Optional.of(totalKeepRankCount); }
+
+    public Optional<Integer> getTotalKeepRankCount() {
+        if (totalKeepRankCount.isPresent()) return totalKeepRankCount;
+        return uniquelyInherited(RankProfile::getTotalKeepRankCount, Optional::isPresent, "total-keep-rank-count").orElse(Optional.empty());
     }
 
     public void setRankScoreDropLimit(double rankScoreDropLimit) { this.rankScoreDropLimit = rankScoreDropLimit; }
@@ -841,6 +981,16 @@ public class RankProfile implements Cloneable {
         }
         return uniquelyInherited(RankProfile::getSecondPhaseRankScoreDropLimit, c -> c > -Double.MAX_VALUE, "second-phase rank-score-drop-limit")
                 .orElse(secondPhaseRankScoreDropLimit);
+    }
+
+    public void setGlobalPhaseRankScoreDropLimit(double limit) { this.globalPhaseRankScoreDropLimit = limit; }
+
+    public double getGlobalPhaseRankScoreDropLimit() {
+        if (globalPhaseRankScoreDropLimit > -Double.MAX_VALUE) {
+            return globalPhaseRankScoreDropLimit;
+        }
+        return uniquelyInherited(RankProfile::getGlobalPhaseRankScoreDropLimit, c -> c > -Double.MAX_VALUE, "global-phase rank-score-drop-limit")
+                .orElse(globalPhaseRankScoreDropLimit);
     }
 
     public void addFunction(String name, List<String> arguments, String expression, boolean inline) {
@@ -921,9 +1071,7 @@ public class RankProfile implements Cloneable {
         addRankProperty(prefix + ".attribute", op.attribute);
         addRankProperty(prefix + ".operation", op.operation);
     }
-    public void addMutateOperation(MutateOperation.Phase phase, String attribute, String operation) {
-        addMutateOperation(new MutateOperation(phase, attribute, operation));
-    }
+
     public List<MutateOperation> getMutateOperations() { return mutateOperations; }
 
     public RankingExpressionFunction findFunction(String name) {
@@ -985,6 +1133,57 @@ public class RankProfile implements Cloneable {
         return combined;
     }
 
+    public void setExplicitFieldRankFilterThresholds(Map<String, Double> fieldFilterThresholds) {
+        explicitFieldRankFilterThresholds = new LinkedHashMap<>(fieldFilterThresholds);
+    }
+
+    public Map<String, Double> explicitFieldRankFilterThresholds() {
+        return explicitFieldRankFilterThresholds;
+    }
+
+    public void setExplicitFieldRankElementGaps(Map<String, ElementGap> fieldElementGaps) {
+        explicitFieldRankElementGaps = new LinkedHashMap<>(fieldElementGaps);
+    }
+
+    public Map<String, ElementGap> explicitFieldRankElementGaps() {
+        if (explicitFieldRankElementGaps.isEmpty() && inherited().isEmpty()) return Map.of();
+        if (inherited().isEmpty()) return Collections.unmodifiableMap(explicitFieldRankElementGaps);
+
+        var inheritedElementGaps = uniquelyInherited(RankProfile::explicitFieldRankElementGaps, m -> ! m.isEmpty(), "element-gap")
+                                           .orElse(Map.of());
+        if (explicitFieldRankElementGaps.isEmpty()) return inheritedElementGaps;
+
+        // Neither is empty
+        Map<String, ElementGap> combined = new LinkedHashMap<>(inheritedElementGaps);
+        combined.putAll(explicitFieldRankElementGaps);
+        return Collections.unmodifiableMap(combined);
+    }
+
+    public Map<String, ElementGap> getFieldRankElementGaps() {
+        Map<String, ElementGap> unionOfInheritedGaps = new LinkedHashMap<>();
+        for (var parent : inherited()) {
+            var fromParent = parent.getFieldRankElementGaps();
+            for (var entry : fromParent.entrySet()) {
+                String fieldName = entry.getKey();
+                ElementGap gap = entry.getValue();
+                ElementGap old = unionOfInheritedGaps.get(fieldName);
+                if (old == null) {
+                    unionOfInheritedGaps.put(fieldName, gap);
+                } else if (! old.equals(gap)) {
+                    // will we override it?
+                    if (explicitFieldRankElementGaps == null || ! explicitFieldRankElementGaps.containsKey(fieldName)) {
+                        throw new IllegalArgumentException("Several of the profiles inherited by " + this +
+                                                           " contains element-gap for field " + fieldName + ", cannot resolve conflict");
+                    }
+                }
+            }
+        }
+        if (explicitFieldRankElementGaps != null) {
+            unionOfInheritedGaps.putAll(explicitFieldRankElementGaps);
+        }
+        return unionOfInheritedGaps;
+    }
+
     private ExpressionFunction parseRankingExpression(String name, List<String> arguments, String expression) throws ParseException {
         if (expression.trim().isEmpty())
             throw new ParseException("Empty expression");
@@ -1032,6 +1231,7 @@ public class RankProfile implements Cloneable {
             clone.summaryFeatures = summaryFeatures != null ? new LinkedHashSet<>(this.summaryFeatures) : null;
             clone.matchFeatures = matchFeatures != null ? new LinkedHashSet<>(this.matchFeatures) : null;
             clone.rankFeatures = rankFeatures != null ? new LinkedHashSet<>(this.rankFeatures) : null;
+            clone.sortFeatures = sortFeatures != null ? new LinkedHashSet<>(this.sortFeatures) : null;
             clone.rankProperties = new LinkedHashMap<>(this.rankProperties);
             clone.inputs = new LinkedHashMap<>(this.inputs);
             clone.functions = new LinkedHashMap<>(this.functions);
@@ -1093,6 +1293,9 @@ public class RankProfile implements Cloneable {
         for (ReferenceNode sf : getSummaryFeatures()) {
             verifyNoNormalizers("summary-feature " + sf, sf, allNormalizers, context);
         }
+        for (ReferenceNode sortFeature : getSortFeatures()) {
+            verifyNoNormalizers("sort-feature " + sortFeature, sortFeature, allNormalizers, context);
+        }
         if (globalPhaseRanking != null) {
             var needInputs = new HashSet<String>();
             Set<String> userDeclaredMatchFeatures = new HashSet<>();
@@ -1119,7 +1322,7 @@ public class RankProfile implements Cloneable {
             }
             List<FeatureList> addIfMissing = new ArrayList<>();
             for (String input : needInputs) {
-                if (input.startsWith("constant(") || input.startsWith("query(")) {
+                if (input.startsWith("constant(") || input.startsWith("query(") || input.equals("relevanceScore")) {
                     continue;
                 }
                 try {
@@ -1325,6 +1528,12 @@ public class RankProfile implements Cloneable {
                 featureTypes.put(FeatureNames.asAttributeFeature(name), new AttributeErrorType(deployLogger, name, a.getCollectionType()));
             }
         });
+        // attributes on struct fields are named "field.structField" and are not in allFieldsList();
+        // imported fields do not support struct traversal, their struct fields are imported one by one
+        if ( ! field.isImportedField()) {
+            for (ImmutableSDField structField : field.getStructFields())
+                addAttributeFeatureTypes(structField, featureTypes);
+        }
     }
 
     @Override
@@ -1523,32 +1732,33 @@ public class RankProfile implements Cloneable {
 
         private String attribute = null;
         private boolean ascending = false;
-        private int maxHits = 0; // try to get this many hits before degrading the match phase
+        private Optional<Long> maxHits = Optional.empty(); // try to get this many hits on each node before degrading the match phase
+        private Optional<Long> totalMaxHits = Optional.empty(); // try to get this many hits across all nodes before degrading the match phase
         private double maxFilterCoverage = 0.2; // Max coverage of original corpus that will trigger the filter.
         private double evaluationPoint = 0.20;
         private double prePostFilterTippingPoint = 1.0;
 
         public void setAscending(boolean value) { ascending = value; }
         public void setAttribute(String value) { attribute = value; }
-        public void setMaxHits(int value) { maxHits = value; }
+        public void setMaxHits(long value) { maxHits = Optional.of(value); }
+        public void setTotalMaxHits(long value) { totalMaxHits = Optional.of(value); }
         public void setMaxFilterCoverage(double value) { maxFilterCoverage = value; }
         public void setEvaluationPoint(double evaluationPoint) { this.evaluationPoint = evaluationPoint; }
         public void setPrePostFilterTippingPoint(double prePostFilterTippingPoint) { this.prePostFilterTippingPoint = prePostFilterTippingPoint; }
 
         public boolean                getAscending() { return ascending; }
         public String                 getAttribute() { return attribute; }
-        public int                      getMaxHits() { return maxHits; }
+        public Optional<Long>        getMaxHits() { return maxHits; }
+        public Optional<Long>   getTotalMaxHits() { return totalMaxHits; }
         public double         getMaxFilterCoverage() { return maxFilterCoverage; }
         public double           getEvaluationPoint() { return evaluationPoint; }
         public double getPrePostFilterTippingPoint() { return prePostFilterTippingPoint; }
 
         public void checkValid() {
-            if (attribute == null) {
-                throw new IllegalArgumentException("match-phase did not set any attribute");
-            }
-            if (! (maxHits > 0)) {
-                throw new IllegalArgumentException("match-phase did not set max-hits > 0");
-            }
+            if (attribute == null)
+                throw new IllegalArgumentException("match-phase must specify an attribute");
+            if (maxHits.isEmpty() && totalMaxHits.isEmpty())
+                throw new IllegalArgumentException("match-phase must contain max-hits or total-max-hits");
         }
 
     }
@@ -1730,7 +1940,8 @@ public class RankProfile implements Cloneable {
         for (var inheritedProfile : inherited()) {
             all.putAll(inheritedProfile.getFeatureNormalizers());
         }
-        for (var n : featureNormalizers) {
+        // Use a copy to avoid concurrent modification exceptions, see addFeatureNormalizer() below
+        for (var n : new ArrayList<>(featureNormalizers)) {
             all.put(n.name(), n);
         }
         return all;
@@ -1766,6 +1977,5 @@ public class RankProfile implements Cloneable {
             }
         }
     }
-
 
 }
